<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".ClickPostActivity">
    <ImageView
        android:id="@+id/post_image"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/choicepicture"/>
    <EditText
        android:layout_marginTop="40dp"
        android:id="@+id/edtStatus"
        android:padding="15dp"
        android:layout_below="@+id/post_image"
        android:hint="@string/your_status"
        android:background="@drawable/inputs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"/>
    <Button
        android:id="@+id/btnEditPost"
        android:layout_below="@+id/edtStatus"
        android:layout_marginTop="30dp"
        android:background="@drawable/custom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_post"
        android:textSize="@dimen/username"
        android:textColor="@color/white"
        />
    <Button
        android:id="@+id/btnDeletePost"
        android:layout_below="@+id/btnEditPost"
        android:layout_marginTop="5dp"
        android:background="@drawable/custom_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_post"
        android:textSize="@dimen/username"
        android:textColor="@color/white"
        />
</RelativeLayout>