<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".SettingActivity">
    <include
        android:id="@+id/setting_toolbar"
        layout="@layout/app_bar_layout"/>
    <ScrollView
        android:layout_below="@+id/setting_toolbar"
        android:layout_alignParentLeft="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/setting_profile_image"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/circleimage"
                android:layout_width="250dp"
                android:layout_height="250dp" />
            <EditText
                android:id="@+id/edtSettingStatus"
                android:layout_below="@+id/setting_profile_image"
                android:layout_marginTop="15dp"
                android:background="@drawable/inputs"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right"
                android:padding="30dp"
                android:hint="@string/profile_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/post_size"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edtUsername"
                android:layout_below="@+id/edtSettingStatus"
                android:layout_marginTop="15dp"
                android:background="@drawable/inputs"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right"
                android:padding="10dp"
                android:hint="@string/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/post_size"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edtSettingProfileName"
                android:layout_below="@+id/edtUsername"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right"
                android:padding="10dp"
                android:hint="@string/profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/post_size"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edtSettingCountry"
                android:layout_below="@+id/edtSettingProfileName"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right"
                android:padding="10dp"
                android:hint="@string/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/post_size"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edtSettingBirthday"
                android:layout_below="@+id/edtSettingCountry"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:padding="10dp"
                android:hint="@string/date_of_birth"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/post_size"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edtGender"
                android:layout_below="@+id/edtSettingBirthday"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right"
                android:padding="10dp"
                android:hint="@string/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/post_size"
                android:textStyle="bold"/>
            <EditText
                android:id="@+id/edtRelationship"
                android:layout_below="@+id/edtGender"
                android:layout_marginTop="5dp"
                android:background="@drawable/inputs"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right"
                android:padding="10dp"
                android:hint="@string/relationship"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/background_dark"
                android:textSize="@dimen/post_size"
                android:textStyle="bold"/>
            <Button
                android:id="@+id/btnSettingUpdateAccount"
                android:layout_below="@+id/edtRelationship"
                android:background="@drawable/custom_button"
                android:text="@string/update_account_setting"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/left"
                android:layout_marginRight="@dimen/right"
                android:textSize="@dimen/post_size"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAllCaps="false"/>
        </RelativeLayout>


    </ScrollView>

</RelativeLayout>