<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundlogin"
    tools:context=".LoginActivity">
    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/logo" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgLogo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/email"

        android:ems="10"

        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edtEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/inputs"
        android:drawableLeft="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="10dp" />

    <Button

        android:id="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_below="@+id/edtPassword"
        android:text="@string/log_in"
        android:background="@drawable/custom_button"/>
    <TextView
        android:id="@+id/txtClick"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnLogin"
        android:text="@string/click_here"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout

        android:layout_below="@+id/txtClick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/imgFacebook"
            android:layout_marginLeft="30dp"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/facebook"/>
        <ImageView
            android:id="@+id/imgTwitter"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/twitter"/>
        <ImageView
            android:id="@+id/imgGoogle"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:src="@drawable/google"/>

    </LinearLayout>
</RelativeLayout>